# mcp-server

./: .mcp.json  README.md  pyproject.toml
server/mcp_server_aisearch_engine/: README.md  pyproject.toml
server/mcp_server_aisearch_engine/src/mcp_server_aisearch_engine/: config.py  server.py
server/mcp_server_aisearch_engine/src/mcp_server_aisearch_engine/common/: auth.py
server/mcp_server_apmplus/: .gitignore  README-zh.md  README.md  README_zh.md  pyproject.toml  requirements.txt  run.sh
server/mcp_server_apmplus/src/mcp_server_apmplus/: api.py  config.py  main.py  model.py  server.py  test.py
server/mcp_server_askecho/: README.md  pyproject.toml
server/mcp_server_askecho/src/mcp_server_askecho/: config.py  model.py  server.py
server/mcp_server_askecho/src/mcp_server_askecho/api/: api_key_auth.py  volcengine_auth.py
server/mcp_server_askecho_search_infinity/: README.md  pyproject.toml
server/mcp_server_askecho_search_infinity/src/mcp_server_askecho_search_infinity/: model.py  server.py
server/mcp_server_askecho_search_infinity/src/mcp_server_askecho_search_infinity/api/: api_key_auth.py  volcengine_auth.py
server/mcp_server_cen/: README.md  pyproject.toml
server/mcp_server_cen/src/mcp_server_cen/: main.py  server.py
server/mcp_server_cen/src/mcp_server_cen/base/: cen.py  config.py
server/mcp_server_cp/: README.md  README_zh.md  pyproject.toml
server/mcp_server_cp/src/mcp_server_cp/: config.py  server.py
server/mcp_server_dbw/: README.md  pyproject.toml  requirements.txt
server/mcp_server_dbw/src/mcp_server_dbw/: server.py
server/mcp_server_dbw/src/mcp_server_dbw/resource/: dbw_resource.py
server/mcp_server_dts/: README.md  pyproject.toml
server/mcp_server_dts/src/mcp_server_dts/: config.py  model.py  server.py
server/mcp_server_flink/: .env_example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run.sh
server/mcp_server_flink/src/mcp_server_flink/: config.py  main.py  server.py
server/mcp_server_flink/src/mcp_server_flink/resources/: event.py  job_development.py  job_operation.py  log.py  project.py  resource_pool.py  services.py
server/mcp_server_flink/src/mcp_server_flink/utils/: open_api_client.py  utils.py
server/mcp_server_flink/tests/resources/: constants.py  test_event.py  test_job_development.py  test_job_operation.py  test_log.py  test_open_api_client.py  test_project.py  test_resource_pool.py
server/mcp_server_flink/tests/utils/: test_utils.py
server/mcp_server_hbase/: README.md  pyproject.toml  requirements.txt
server/mcp_server_hbase/src/mcp_server_hbase/: server.py
server/mcp_server_hbase/src/mcp_server_hbase/resource/: hbase_resource.py
server/mcp_server_hqd/: .env_example  README.md  README_zh.md  pyproject.toml
server/mcp_server_hqd/src/mcp_server_hqd/: config.py  remote_client.py  server.py
server/mcp_server_mediakit/: README.md  README_zh.md  pyproject.toml  tools.json  trae.json
server/mcp_server_mediakit/src/base/: __init__.py  api_info.py  base_mcp.py  client.py  constant.py
server/mcp_server_mediakit/src/mediakit/: mcp_server.py  server.py
server/mcp_server_mediakit/src/mediakit/mcp_tools/: audio.py  editing.py  image.py  shared.py  video.py
server/mcp_server_mediakit/src/mediakit/utils/: async_poller.py  response.py
server/mcp_server_metrics/: README.md  README_zh.md  pyproject.toml  requirements.txt  run.sh
server/mcp_server_metrics/src/mcp_server_metrics/: api.py  config.py  main.py  model.py  server.py
server/mcp_server_openviking_controlplane/: README.md  README_zh.md  pyproject.toml
server/mcp_server_openviking_controlplane/skills/openviking-controlplane/: SKILL.md
server/mcp_server_openviking_controlplane/src/mcp_server_openviking_controlplane/: cli.py  client.py  config.py  server.py
server/mcp_server_openviking_controlplane/src/mcp_server_openviking_controlplane/common/: auth.py
server/mcp_server_rds_mssql/src/: README.md  pyproject.toml
server/mcp_server_rds_mssql/src/mcp_server_rds_mssql/: server.py
server/mcp_server_rds_mssql/src/mcp_server_rds_mssql/resource/: rds_mssql_resource.py
server/mcp_server_rds_postgresql/: README.md  README_zh.md  pyproject.toml  requirements.txt
server/mcp_server_rds_postgresql/src/mcp_server_rds_postgresql/: server.py
server/mcp_server_rds_postgresql/src/mcp_server_rds_postgresql/resource/: rds_postgresql_resource.py
server/mcp_server_rds_postgresql/src/mcp_server_rds_postgresql/tools/: credential.py
server/mcp_server_redis/: README.md  README_zh.md  pyproject.toml  requirements.txt
server/mcp_server_redis/src/mcp_server_redis/: params.py  server.py
server/mcp_server_redis/src/mcp_server_redis/resource/: configs.py  redis_resource.py  vpc_resource.py
server/mcp_server_redis/tests/: test_sts_auth.py  verify_sts_flow.py
server/mcp_server_search_infinity/: README.md  pyproject.toml
server/mcp_server_search_infinity/src/mcp_server_search_infinity/: config.py  server.py
server/mcp_server_supabase/: .dockerignore  Dockerfile  README.md  README_zh.md  pyproject.toml
server/mcp_server_supabase/src/mcp_server_supabase/: __init__.py  access_policy.py  config.py  credentials.py  runtime.py  scoped_mcp.py  server.py  sse.py  streamable_http.py  tool_registry.py
server/mcp_server_supabase/src/mcp_server_supabase/models/: __init__.py  database.py  edge_function.py  storage.py  workspace.py
server/mcp_server_supabase/src/mcp_server_supabase/platform/: __init__.py  aidap_client.py  supabase_client.py
server/mcp_server_supabase/src/mcp_server_supabase/tools/: __init__.py  base.py  compute_tools.py  database_admin_tools.py  database_tools.py  edge_function_tools.py  storage_tools.py  workspace_tools.py
server/mcp_server_transitrouter/: README.md  pyproject.toml
server/mcp_server_transitrouter/src/mcp_server_transitrouter/: main.py  server.py
server/mcp_server_vke/: README.md  README_ZH.md  pyproject.toml  requirements.txt
server/mcp_server_vke/src/base/: base_service.py  base_trait.py
server/mcp_server_vke/src/vke/: k8s_api.py  mcp_server.py  note.py  server.py
(+356 files in other folders)
