[project]
name = "mcp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "liubin.007",email = "liubin.007@bytedance.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp (>=1.22.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
