[project]
name = "mcp-server-apmplus"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.1.0",
    "click==8.2.0",
    "mcp==1.12.4",
    "requests>=2.32.3",
    "volcengine-python-sdk==5.0.14",
]

[project.scripts]
mcp-server-apmplus = "mcp_server_apmplus.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

#[tool.uv.sources]
#mcp = { git = "https://github.com/zihengli-bytedance/python-sdk.git", rev = "temp-for-volc" }
