[project]
name = "mcp-server-askecho"
version = "0.1.0"
description = "MCP Server for AskEcho"
readme = "README.md"
authors = [
    { name = "liqi.0117", email = "liqi.0117@bytedance.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp==1.12.4",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "aiohttp>=3.9.0",
]

[project.scripts]
mcp-server-askecho = "mcp_server_askecho.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
