[project]
name = "mcp-server-cen"
version = "0.1.0"
description = "MCP Server for CEN"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.10.0",
    "volcengine-python-sdk==4.0.20",
]

[project.scripts]
mcp-server-cen = "mcp_server_cen.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
