[project]
name = "mcp-server-dts"
version = "0.1.0"
description = "MCP server for DTS Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12.0",
    "aiohttp>=3.11.14",
    "deprecated>=1.2.18",
    "volcengine-python-sdk>=4.0.25",
    "fastmcp>=2.0.0",
]

[project.scripts]
mcp-server-dts = "mcp_server_dts.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
