[project]
name = "mcp-server-flink"
version = "0.1.0"
description = "MCP server for Serverless Flink API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "volcengine>=1.0.175",
    "mcp[cli]>=1.12.0",
    "volcengine-python-sdk==4.0.29",
    "pytest (>=8.4.2,<9.0.0)",
]

[tool.poetry]
packages = [{ include = "mcp_server_flink", from = "src" }]

[project.scripts]
mcp-server-flink = "mcp_server_flink.main:main"

[build-system]
requires = ["hatchling", "pydantic-core>=2.33.1", "pydantic>=2.0.0"]
build-backend = "hatchling.build"
[tool.hatch.metadata]
allow-direct-references = true
