[project]
name = "mcp-server-hqd"
version = "0.1.0"
description = "MCP server for HQD Multi-Source Enterprise Data Search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.5.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
mcp-server-hqd = "mcp_server_hqd.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
