[project]
name = "mcp-server-metrics"
version = "0.1.0"
description = "Metrics MCP Server for Volcengine"
readme = "README.md"
authors = [
    { name = "yeqiongzhou", email = "yeqiongzhou@bytedance.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12.0",
    "requests>=2.32.0",
    "volcengine-python-sdk>=4.0.30",
]

[project.scripts]
mcp-server-metrics = "mcp_server_metrics.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
