[project]
name = "mcp-server-openviking-controlplane"
version = "0.1.0"
description = "MCP server and CLI for the OpenViking control plane (topapi) collection management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.5.0",
    "requests>=2.31.0",
    "typer>=0.12.0",
]

[project.scripts]
mcp-server-openviking-controlplane = "mcp_server_openviking_controlplane.server:main"
ov-cp = "mcp_server_openviking_controlplane.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
