[project]
name = "mcp-server-rds-postgresql"
version = "1.1.0"
description = "MCP server for RDS PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "mcp>=1.9.4",
    "volcengine-python-sdk>=4.0.41",
]
[project.scripts]
mcp-server-rds-postgresql = "mcp_server_rds_postgresql.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"