[project]
name = "mcp-server-supabase"
version = "0.1.0"
description = "MCP server for Volcengine Supabase"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Volcengine", email = "support@volcengine.com" }
]
dependencies = [
    "mcp==1.12.2",
    "httpx>=0.27.0",
    "pydantic>=2.8.0,<3.0.0",
    "volcengine-python-sdk @ git+https://github.com/sjcsjcsjc/volcengine-python-sdk.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
legacy = [
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
mcp-server-supabase = "mcp_server_supabase.server:main"
mcp-server-supabase-sse = "mcp_server_supabase.sse:main"
mcp-server-supabase-streamable = "mcp_server_supabase.streamable_http:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_supabase"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
