[project]
name = "mcp-server-transitrouter"
version = "0.1.0"
description = "MCP Server for TransitRouter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.10.0",
    "volcengine-python-sdk==4.0.20",
]

[project.scripts]
mcp-server-tr = "mcp_server_transitrouter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_transitrouter"]
