[project]
name = "mcp-server-rds-mssql"
version = "1.0.0"
description = "MCP server for rds_mssql"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli],"
    "mcp>=1.12.0,"
    "volcengine-python-sdk>=4.0.34,"
]

[project.scripts]
mcp-server-rds-mssql = "mcp_server_rds_mssql.server:main"

[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"
